✏️ Fix the syntax issue of GitHub Action config.

--- a/.github/workflows/rw_build_and_test.yaml
+++ b/.github/workflows/rw_build_and_test.yaml
@@ -65,8 +65,8 @@ jobs:
       test_type: ci-script-test
       test_folder: './test/ci_script_test'
       install_dependency_with_group: 'dev'
-      python-versions: ${{ env.PYTHON_VERSIONS }}
-      operating-systems: ${{ env.OPERATING_SYSTEMS }}
+      python-versions: '["3.13"]'
+      operating-systems: '["ubuntu-latest", "ubuntu-22.04", "macos-latest", "macos-14"]'
 
   unit-test_codecov:
 #    name: For unit test, organize and generate the testing report and upload it to Codecov
