--- a/.github/workflows/rw_build_and_test.yaml
+++ b/.github/workflows/rw_build_and_test.yaml
@@ -136,28 +136,11 @@ jobs:
     with:
       test_type: contract-test
 
-  all_test_not_e2e_test_codecov:
+  all_test_codecov:
 #    name: Organize and generate the testing report and upload it to Codecov
     if: ${{
-        (
-            contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
-            (github.event_name == 'push' && github.ref_name == 'master')
-        ) &&
-        inputs.run_e2e == false
-      }}
-    needs: [run_unit-test, run_integration-test, run_contract-test]
-    uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_organize_test_cov_reports.yaml@master
-    with:
-      test_type: all-test
-
-  all_test_include_e2e_test_codecov:
-#    name: Organize and generate the testing report and upload it to Codecov
-    if: ${{
-        (
-            contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
-            (github.event_name == 'push' && github.ref_name == 'master')
-        ) &&
-        inputs.run_e2e == true
+          contains(fromJSON('["pull_request","workflow_dispatch","schedule"]'), github.event_name) ||
+          (github.event_name == 'push' && github.ref_name == 'master')
       }}
     needs: [run_unit-test, run_integration-test, run_contract-test, run_one_e2e-test]
     uses: Chisanan232/Template-Python-UV-Project/.github/workflows/rw_organize_test_cov_reports.yaml@master
