✏️ Adjust to use the environment variable *E2E_TEST_API_TOKEN* for the template project CI workflow design.
(cherry picked from commit ca0d14f76a919422bee8e7a021579e6e65da9a13)

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ SLACK_SIGNING_SECRET=<your-slack-signing-secret>
 SLACK_TEST_CHANNEL='#your-channel-name'
 SLACK_TEST_CHANNEL_ID=<your-channel-id>
 
+# end-to-end test only
+E2E_TEST_API_TOKEN=<SLACK_BOT_TOKEN>
+
 ## message queue backend settings
 # Options: memory (default), redis, kafka
 QUEUE_BACKEND=memory
