--- a/test/e2e_test/.env.example
+++ b/test/e2e_test/.env.example
@@ -1,7 +1,54 @@
-# secret
+# =============================================================================
+# End-to-End (E2E) Test Environment Configuration
+# =============================================================================
+# This file contains the environment variables needed to run end-to-end tests
+# that interact with real Slack APIs. Copy this file to .env and fill in your
+# actual values.
+
+# -----------------------------------------------------------------------------
+# Slack API Authentication Tokens
+# -----------------------------------------------------------------------------
+
+# Primary Slack Bot Token (used by the application)
+# This is a bot token that starts with "xoxb-" and is used by the main application
+# Get this from: https://api.slack.com/apps -> Your App -> OAuth & Permissions -> Bot User OAuth Token
 SLACK_BOT_TOKEN=xoxb-your-bot-token
+
+# E2E Test API Token (used specifically for end-to-end testing)
+# This should be a separate bot token for testing to avoid conflicts with production
+# Can be the same as SLACK_BOT_TOKEN if you're testing in a dedicated workspace
+# Get this from: https://api.slack.com/apps -> Your Test App -> OAuth & Permissions -> Bot User OAuth Token
+E2E_TEST_API_TOKEN=xoxb-your-e2e-test-token
+
+# Slack User Token (optional, for user-level API operations)
+# This is a user token that starts with "xoxp-" for operations requiring user permissions
+# Get this from: https://api.slack.com/apps -> Your App -> OAuth & Permissions -> User OAuth Token
 SLACK_USER_TOKEN=xoxp-your-user-token
 
-# message setting
+# -----------------------------------------------------------------------------
+# Slack Test Channel Configuration
+# -----------------------------------------------------------------------------
+
+# Test Channel Name (human-readable channel name with # prefix)
+# This is the channel where test messages will be sent during E2E tests
+# Example: '#test-mcp-server' or '#dev-testing'
 SLACK_TEST_CHANNEL='#your-channel-name'
+
+# Test Channel ID (internal Slack channel identifier)
+# This is the actual channel ID that Slack uses internally (starts with 'C')
+# Get this from: Slack -> Right-click channel -> View channel details -> Copy channel ID
+# Or use the Slack API conversations.list endpoint
 SLACK_TEST_CHANNEL_ID=your-channel-id
+
+# -----------------------------------------------------------------------------
+# Required Slack App Permissions for E2E Tests
+# -----------------------------------------------------------------------------
+# Your Slack app needs these OAuth scopes for the tests to work:
+# Bot Token Scopes:
+#   - channels:read       (read channel information)
+#   - chat:write         (send messages)
+#   - reactions:write    (add emoji reactions)
+#   - emoji:read         (read workspace emojis)
+#   - channels:history   (read channel message history)
+# User Token Scopes (if using SLACK_USER_TOKEN):
+#   - channels:read      (read channel information as user)
