--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,6 +55,8 @@ jobs:
   build-and-test_all:
 #    name: Run all tests and organize all test reports
     uses: ./.github/workflows/rw_run_all_test_and_record.yaml
+    with:
+      with-environment-variables: 'SLACK_BOT_TOKEN="${{ secrets.e2e_test_api_token }}" E2E_TEST_API_TOKEN="${{ secrets.e2e_test_api_token }}" SLACK_TEST_CHANNEL_ID="${{ vars.SLACK_TEST_CHANNEL_ID }}"'
     secrets:
       codecov_token: ${{ secrets.CODECOV_TOKEN }}
       sonar_token: ${{ secrets.SONAR_TOKEN }}
