--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "🦾 A strong MCP server for Slack."
 authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
 requires-python = ">=3.12,<3.14"
 readme = "README.md"
-license = { text = "MIT" }
+license = { file = "LICENSE" }
 keywords = [
     "slack",
     "mcp",
