✏️ Fix the broken CI workflow about uploading the README to the DockerHub of this project.

--- a/.github/workflows/dockerhub-readme-ci.yml
+++ b/.github/workflows/dockerhub-readme-ci.yml
@@ -6,7 +6,7 @@ on:
       - "master"
     paths:
 #     For GitHub Action
-      - ".github/workflows/docker-update-readme.yml"
+      - ".github/workflows/dockerhub-readme-ci.yml"
 #     For the README file for the Docker Hub
       - "README_DOCKERHUB.md"
 
@@ -21,40 +21,30 @@ on:
 #      - "README_DOCKERHUB.md"
 
 env:
-  TEST_TAG: user/slack-mcp-server:test
+  # Optional short description shown on Docker Hub
+  DOCKER_IMAGE_NAME: slack-mcp-server
   DOCKER_HUB_SHORT_DESCRIPTION: 🦾 A strong MCP server for Slack.
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-flags: --debug
-
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: ${{ env.TEST_TAG }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
       - name: Update repo description in Docker Hub
         uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa # v5.0.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: ${{ env.GITHUB_REPOSITORY }}
-          short-description: ${{ env.DOCKER_HUB_SHORT_DESCRIPTION }}
+          # Set your Docker Hub repository in the form <namespace>/<name>
+          # If your Docker Hub repo name matches this GitHub repo name, this will work:
+          repository: ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.DOCKER_IMAGE_NAME }}
+          short-description: ${{ vars.DOCKER_HUB_SHORT_DESCRIPTION }}
           readme-filepath: ./README_DOCKERHUB.md
