--- a/.github/workflows/dockerhub-readme-ci.yml
+++ b/.github/workflows/dockerhub-readme-ci.yml
@@ -11,14 +11,14 @@ on:
       - "README_DOCKERHUB.md"
 
   # For debug and test only
-#  pull_request:
-#    branches:
-#      - "master"
-#    paths:
-##     For GitHub Action
-#      - ".github/workflows/docker-update-readme.yml"
-##     For the README file for the Docker Hub
-#      - "README_DOCKERHUB.md"
+  pull_request:
+    branches:
+      - "master"
+    paths:
+#     For GitHub Action
+      - ".github/workflows/docker-update-readme.yml"
+#     For the README file for the Docker Hub
+      - "README_DOCKERHUB.md"
 
 env:
   # Optional short description shown on Docker Hub
