--- a/.github/workflows/dockerhub-readme-ci.yml
+++ b/.github/workflows/dockerhub-readme-ci.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Get JWT with username/token
         env:
-          USERNAME: ${{ vars.DOCKERHUB_ORG }}
+          USERNAME: chisanan232
           TOKEN:    ${{ secrets.DOCKERHUB_README_UPDATE_TOKEN }}
         run: |
           set -euo pipefail
@@ -94,13 +94,13 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_ORG }}
+          username: chisanan232
           password: ${{ secrets.DOCKERHUB_README_UPDATE_TOKEN }}
 
       - name: Update repo description in Docker Hub
         uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa # v5.0.0
         with:
-          username: ${{ vars.DOCKERHUB_ORG }}
+          username: chisanan232
           password: ${{ secrets.DOCKERHUB_README_UPDATE_TOKEN }}
           # Set your Docker Hub repository in the form <namespace>/<name>
           # If your Docker Hub repo name matches this GitHub repo name, this will work:
