--- a/.github/workflows/dockerhub-readme-ci.yml
+++ b/.github/workflows/dockerhub-readme-ci.yml
@@ -75,32 +75,32 @@ jobs:
             -d "{\"full_description\":\"${NEW}\"}" \
             "https://hub.docker.com/v2/repositories/${REPO}/")
           echo "PATCH full_description -> $CODE"
-          # 若寫入成功，再把它改回去
-          if [ "$CODE" = "200" ]; then
-            curl -s -o /dev/null -w '%{http_code}' -X PATCH \
-              -H "Authorization: JWT $JWT" -H "Content-Type: application/json" \
-              -d "$(jq -n --arg v "$ORIG" '{full_description:$v}')" \
-              "https://hub.docker.com/v2/repositories/${REPO}/"
-            echo "✅ write succeeded (and reverted)"
-          else
-            echo "❌ write denied"
-            exit 1
-          fi
+#          # 若寫入成功，再把它改回去
+#          if [ "$CODE" = "200" ]; then
+#            curl -s -o /dev/null -w '%{http_code}' -X PATCH \
+#              -H "Authorization: JWT $JWT" -H "Content-Type: application/json" \
+#              -d "$(jq -n --arg v "$ORIG" '{full_description:$v}')" \
+#              "https://hub.docker.com/v2/repositories/${REPO}/"
+#            echo "✅ write succeeded (and reverted)"
+#          else
+#            echo "❌ write denied"
+#            exit 1
+#          fi
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: chisanan232
-          password: ${{ secrets.DOCKERHUB_README_UPDATE_TOKEN }}
-
-      - name: Update repo description in Docker Hub
-        uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa # v5.0.0
-        with:
-          username: chisanan232
-          password: ${{ secrets.DOCKERHUB_README_UPDATE_TOKEN }}
-          # Set your Docker Hub repository in the form <namespace>/<name>
-          # If your Docker Hub repo name matches this GitHub repo name, this will work:
-          repository: chisanan232/slack-mcp-server
-          short-description: ${{ vars.DOCKER_HUB_SHORT_DESCRIPTION }}
-          readme-filepath: ./TEST_README.md
-#          readme-filepath: ./README_DOCKERHUB.md
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v3
+#        with:
+#          username: chisanan232
+#          password: ${{ secrets.DOCKERHUB_README_UPDATE_TOKEN }}
+#
+#      - name: Update repo description in Docker Hub
+#        uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa # v5.0.0
+#        with:
+#          username: chisanan232
+#          password: ${{ secrets.DOCKERHUB_README_UPDATE_TOKEN }}
+#          # Set your Docker Hub repository in the form <namespace>/<name>
+#          # If your Docker Hub repo name matches this GitHub repo name, this will work:
+#          repository: chisanan232/slack-mcp-server
+#          short-description: ${{ vars.DOCKER_HUB_SHORT_DESCRIPTION }}
+#          readme-filepath: ./TEST_README.md
+##          readme-filepath: ./README_DOCKERHUB.md
