✏️ Update the SonarQube setting for the test coverage report.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,5 +19,13 @@ sonar.python.version=3.12,3.13
 sonar.python.coverage.reportPaths=coverage*.xml
 #sonar.coverage.python.reportPaths=coverage*.xml
 
+# Ignore by test coverage
+sonar.coverage.exclusions=slack_mcp/types.py
+
+# Ignore by general analyze
+# sonar.exclusions=**/migrations/**
+# Ignore some test files
+# sonar.test.exclusions=tests/helpers/**
+
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
