➕ Add cache mechanism at all the Python uv relative CI workflows.

--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -46,6 +46,8 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           python-version: 3.13
+          enable-cache: true
+          cache-dependency-glob: "**/uv.lock"
 
       - name: Verify py.typed marker exists
         run: |
@@ -130,6 +132,8 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           python-version: 3.13
+          enable-cache: true
+          cache-dependency-glob: "**/uv.lock"
 
       - name: Install package
         run: |
