--- a/.github/workflows/validate_slack_event_types.yml
+++ b/.github/workflows/validate_slack_event_types.yml
@@ -25,6 +25,8 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           python-version: 3.13
+          enable-cache: true
+          cache-dependency-glob: "**/uv.lock"
 
       - name: Activate the uv virtual environment
         run: |
