--- a/.github/workflows/release-validate.yml
+++ b/.github/workflows/release-validate.yml
@@ -63,7 +63,7 @@ jobs:
   # Call the centralized complete validation workflow
   validation:
     name: Complete Release Validation Process
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_release_validation_complete.yaml@develop_fix_broke_release
+    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_release_validation_complete.yaml@master
     with:
       level: ${{ inputs.level }}
       python: ${{ inputs.python }}
