✏️ Update more details of the dotenv example file.

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,97 @@
-# secret
-SLACK_BOT_ID=<your-slack-bot-ID>
+# =============================================================================
+# Slack MCP Server Environment Configuration
+# =============================================================================
+# This file contains all environment variables used by the Slack MCP Server.
+# Copy this file to .env and fill in your actual values.
+#
+# IMPORTANT: Environment Priority Order
+# ─────────────────────────────────────
+# When running the server, secrets are loaded in this priority order:
+#   1. .env file (HIGHEST PRIORITY - values here override everything)
+#   2. CLI arguments (--slack-token) - used as fallback if not in .env
+#   3. Environment variables already set - lowest priority
+#
+# This means values in your .env file will ALWAYS take precedence over
+# CLI arguments, making it easier to manage different environments.
+# =============================================================================
+
+# ─────────────────────────────────────────────────────────────────────────────
+# Required: Slack Authentication
+# ─────────────────────────────────────────────────────────────────────────────
+# Your Slack bot token (required for both MCP and webhook servers)
+# Format: xoxb-... (bot token) or xoxp-... (user token)
+# Get it from: https://api.slack.com/apps → Your App → OAuth & Permissions
 SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
+
+# ─────────────────────────────────────────────────────────────────────────────
+# Optional: Additional Slack Credentials
+# ─────────────────────────────────────────────────────────────────────────────
+# Your Slack bot's user ID (optional, for advanced features)
+# Format: B1234567890
+# Get it from: https://api.slack.com/apps → Your App → Basic Information
+SLACK_BOT_ID=<your-slack-bot-ID>
+
+# Slack user token (optional, for user-level operations)
+# Format: xoxp-...
+# Get it from: https://api.slack.com/apps → Your App → OAuth & Permissions
 SLACK_USER_TOKEN=xoxp-your-slack-user-token
+
+# Slack signing secret (optional, for webhook request verification)
+# Get it from: https://api.slack.com/apps → Your App → Basic Information
 SLACK_SIGNING_SECRET=<your-slack-signing-secret>
 
-# message setting
+# ─────────────────────────────────────────────────────────────────────────────
+# Optional: Development & Testing Configuration
+# ─────────────────────────────────────────────────────────────────────────────
+# Test channel name (useful for development/testing)
+# Format: #channel-name (include the # symbol)
 SLACK_TEST_CHANNEL='#your-channel-name'
+
+# Test channel ID (recommended over channel name)
+# Format: C1234567890
+# Get it from: Right-click channel → View channel details → Copy channel ID
 SLACK_TEST_CHANNEL_ID=<your-channel-id>
 
-# end-to-end test only
+# End-to-end test API token (for E2E tests only)
+# Use the same value as SLACK_BOT_TOKEN or a separate test token
 E2E_TEST_API_TOKEN=<SLACK_BOT_TOKEN>
 
-## message queue backend settings
-# Options: memory (default), redis, kafka
+# ─────────────────────────────────────────────────────────────────────────────
+# Optional: Message Queue Backend Configuration
+# ─────────────────────────────────────────────────────────────────────────────
+# Queue backend type
+# Options: memory (default), redis, kafka, or custom backend name
+# - memory: In-memory queue (good for development, not persistent)
+# - redis: Redis-based queue (recommended for production)
+# - kafka: Apache Kafka (for high-throughput scenarios)
 QUEUE_BACKEND=memory
-# Redis backend settings (when QUEUE_BACKEND=redis)
+
+# Redis backend settings (only used when QUEUE_BACKEND=redis)
+# Format: redis://[username:password@]host:port/database
+# Examples:
+#   - redis://localhost:6379/0
+#   - redis://user:pass@redis-server:6379/1
 REDIS_URL=redis://localhost:6379/0
-# Kafka backend settings (when QUEUE_BACKEND=kafka)
+
+# Kafka backend settings (only used when QUEUE_BACKEND=kafka)
+# Format: broker1:port,broker2:port,broker3:port
+# Examples:
+#   - broker:9092
+#   - kafka-1:9092,kafka-2:9092,kafka-3:9092
 KAFKA_BOOTSTRAP=broker:9092
+
+# ─────────────────────────────────────────────────────────────────────────────
+# Notes
+# ─────────────────────────────────────────────────────────────────────────────
+# 1. Never commit this file with real credentials to version control
+# 2. Add .env to your .gitignore file
+# 3. Use different .env files for different environments:
+#    - .env.development (for local development)
+#    - .env.production (for production deployment)
+#    - .env.test (for testing)
+# 4. Set appropriate file permissions: chmod 600 .env
+# 5. For Docker deployments, you can mount this file or pass variables directly
+#
+# For more information, see:
+# https://chisanan232.github.io/slack-mcp-server/document/server-references/environment-configuration
+# =============================================================================
